[tool.poetry]
name = "code-context"
version = "0.1.0"
description = ""
authors = ["Morgan Griffiths <morgangriffiths@openai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
websockets = "^12.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
